--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,36 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
-platform = atmelavr
-board = nanoatmega328new
-framework = arduino
+; [env:nanoatmega328new]
+; platform = atmelavr
+; board = nanoatmega328new
+; framework = arduino
+; upload_protocol = usbasp
+; upload_flags = -v -p m328pb -c usbasp -B 6 -F
+; lib_deps = 
+;     adafruit/Adafruit SSD1306@^2.5.13
+;     robtillaart/INA226@^0.6.4
+
+; [env:nanoatmega328pb]
+; platform = atmelavr
+; board = ATmega328PB
+; framework = arduino
+; upload_protocol = usbasp
+; upload_flags = -v -p m328pb -c usbasp -B 6 -F
+; lib_deps = 
+;     adafruit/Adafruit SSD1306@^2.5.13
+;     robtillaart/INA226@^0.6.4
+
+[env:atmelavr_usbasp]
+platform       = atmelavr
+framework      = arduino
+board          = ATmega328PB
+upload_protocol = usbasp
+upload_flags   =
+  -Pusb
+  -e
+  -B10
+  -F
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.13
 	robtillaart/INA226@^0.6.4
