--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:nanoatmega328new]
+; [env:ATmega328PB]
 ; platform = atmelavr
-; board = nanoatmega328new
+; board = ATmega328PB
 ; framework = arduino
-; upload_protocol = usbasp
-; upload_flags = -v -p m328pb -c usbasp -B 6 -F
+; ; upload_protocol = usbasp
+; ; upload_flags = -v -p m328pb -c usbasp -B 6 -F
 ; lib_deps = 
 ;     adafruit/Adafruit SSD1306@^2.5.13
 ;     robtillaart/INA226@^0.6.4
